# sentinel-os

./: .gitignore  DECISIONS_LOG.md  DEVIATIONS.md  LICENSE  README.md  RUNBOOK.md  eslint.config.js  example.env  package.json  pnpm-lock.yaml  prettier.config.js  pyproject.toml  turbo.json
Doc/: 00_MASTER_CONTEXT.md  01_PROJECT_VISION.md  02_PRODUCT_REQUIREMENTS.md  03_ARCHITECTURE.md  04_DATABASE.md  05_API_SPEC.md  06_CAPABILITY_SPECIFICATIONS.md  07_WORKFLOW_ENGINE.md  08_AGENT_SPECIFICATIONS.md  09_TOOLING_AND_MCP.md  10_PROMPT_ENGINEERING.md  11_KNOWLEDGE_SYSTEM.md  12_SECURITY.md  13_DEMO_SCRIPT.md  13_OBSERVABILITY.md  14_DEPLOYMENT.md  15_ARCHITECTURE_DECISIONS.md  15_IMPLEMENTATION_MASTER_PLAN.md  README.md
ai/simulator/: .env.example  Dockerfile  event_generator.py  pyproject.toml
apps/dashboard/: .env.example  Dockerfile  index.html  package-lock.json  package.json
docs/: Architecture.md  Demo.md  Roadmap.md  Setup.md
docs/assets/: README.md
infra/: docker-compose.yml
infra/seed/: 01_schema.sql  02_triggers.sql  03_seed_data.sql  (+1 more)
scripts/: validate-schemas.sh
services/orchestration/: .env.example  Dockerfile  main.py  observability.py  pyproject.toml
services/orchestration/agents/: __init__.py  detect.py  execute.py  improve.py  investigate.py  monitor.py  plan.py  record.py
services/orchestration/graph/: __init__.py  state.py  workflow.py
services/orchestration/prompts/: plan_v1.0.txt  rca_v1.0.txt
services/orchestration/tools/: __init__.py  baseline_engine.py  business_system_write.py  llm_client.py  mcp_server.py  read_tools.py
(+22 files in other folders)
