[project]
name = "sentinel-orchestration"
version = "1.0.0"
description = "Sentinel OS Agent Orchestration Service & LangGraph Workflow Engine"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "langgraph>=0.1.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
